# csv-consolidate

./: README.md  pyproject.toml
src/csv_consolidate/: main.py
