[project]
name = "csv-consolidate"
version = "0.1.0"
description = "Same format CSV consolidator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "pyqt6>=6.9.1",
 "pywebview>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "rumdl>=0.0.113",
]

[project.scripts]
csv_consolidate = "csv_consolidate.main:main"
